Make my own branch

--- a/20_modeling/clean_vital_all.ipynb
+++ b/20_modeling/clean_vital_all.ipynb
@@ -922,7 +922,7 @@
    "source": [
     "# change the types of columns which have numbers from float to integer\n",
     "# check if there is null data\n",
-    "# if looks fine, but..\n",
+    "# it looks fine, but..\n",
     "vital_drug.isnull().any()"
    ]
   },
