--- a/20_modeling/clean_opioid.ipynb
+++ b/20_modeling/clean_opioid.ipynb
@@ -79,7 +79,7 @@
     "select_data = []\n",
     "\n",
     "for gzfile in filelist:\n",
-    "    raw = pd.read_csv(gzfile, iterator= True, chunksize = 10000, compression='gzip', error_bad_lines=False)\n",
+    "    raw = pd.read_csv(gzfile, iterator= True, chunksize = 10000, compression='gzip', on_bad_lines='skip')\n",
     "\n",
     "\n",
     "    for df in raw:\n",
