store as a parquet file

--- a/20_modeling/clean_vital_all.ipynb
+++ b/20_modeling/clean_vital_all.ipynb
@@ -7,256 +7,21 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Notes</th>\n",
-       "      <th>County</th>\n",
-       "      <th>County Code</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Year Code</th>\n",
-       "      <th>Drug/Alcohol Induced Cause</th>\n",
-       "      <th>Drug/Alcohol Induced Cause Code</th>\n",
-       "      <th>Deaths</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4465</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Outagamie County, WI</td>\n",
-       "      <td>55087.0</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>All other non-drug and non-alcohol causes</td>\n",
-       "      <td>O9</td>\n",
-       "      <td>1163.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>710</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Candler County, GA</td>\n",
-       "      <td>13043.0</td>\n",
-       "      <td>2007.0</td>\n",
-       "      <td>2007.0</td>\n",
-       "      <td>All other non-drug and non-alcohol causes</td>\n",
-       "      <td>O9</td>\n",
-       "      <td>126.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3629</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Jeff Davis County, TX</td>\n",
-       "      <td>48243.0</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>All other non-drug and non-alcohol causes</td>\n",
-       "      <td>O9</td>\n",
-       "      <td>12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2070</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Harrison County, MS</td>\n",
-       "      <td>28047.0</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>2010.0</td>\n",
-       "      <td>All other alcohol-induced causes</td>\n",
-       "      <td>A9</td>\n",
-       "      <td>16.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2813</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Cleveland County, NC</td>\n",
-       "      <td>37045.0</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>Drug poisonings (overdose) Unintentional (X40-...</td>\n",
-       "      <td>D1</td>\n",
-       "      <td>14.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3496</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Houston County, TN</td>\n",
-       "      <td>47083.0</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>All other non-drug and non-alcohol causes</td>\n",
-       "      <td>O9</td>\n",
-       "      <td>92.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3108</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Clark County, OH</td>\n",
-       "      <td>39023.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Drug poisonings (overdose) Unintentional (X40-...</td>\n",
-       "      <td>D1</td>\n",
-       "      <td>71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>140</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Wrangell-Petersburg Census Area, AK</td>\n",
-       "      <td>2280.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>2015.0</td>\n",
-       "      <td>Drug poisonings (overdose) Suicide (X60-X64)</td>\n",
-       "      <td>D2</td>\n",
-       "      <td>Missing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>522</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yuma County, CO</td>\n",
-       "      <td>8125.0</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>2013.0</td>\n",
-       "      <td>All other non-drug and non-alcohol causes</td>\n",
-       "      <td>O9</td>\n",
-       "      <td>82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1665</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Washington Parish, LA</td>\n",
-       "      <td>22117.0</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>All other non-drug and non-alcohol causes</td>\n",
-       "      <td>O9</td>\n",
-       "      <td>569.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3323</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Dauphin County, PA</td>\n",
-       "      <td>42043.0</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>All other alcohol-induced causes</td>\n",
-       "      <td>A9</td>\n",
-       "      <td>15.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2692</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Caswell County, NC</td>\n",
-       "      <td>37033.0</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>All other non-drug and non-alcohol causes</td>\n",
-       "      <td>O9</td>\n",
-       "      <td>219.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>852</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Warren County, GA</td>\n",
-       "      <td>13301.0</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>All other non-drug and non-alcohol causes</td>\n",
-       "      <td>O9</td>\n",
-       "      <td>67.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3911</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Gillespie County, TX</td>\n",
-       "      <td>48171.0</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>2014.0</td>\n",
-       "      <td>All other non-drug and non-alcohol causes</td>\n",
-       "      <td>O9</td>\n",
-       "      <td>300.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4149</th>\n",
-       "      <td>---</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Notes                               County  County Code    Year  \\\n",
-       "4465   NaN                 Outagamie County, WI      55087.0  2012.0   \n",
-       "710    NaN                   Candler County, GA      13043.0  2007.0   \n",
-       "3629   NaN                Jeff Davis County, TX      48243.0  2006.0   \n",
-       "2070   NaN                  Harrison County, MS      28047.0  2010.0   \n",
-       "2813   NaN                 Cleveland County, NC      37045.0  2013.0   \n",
-       "3496   NaN                   Houston County, TN      47083.0  2009.0   \n",
-       "3108   NaN                     Clark County, OH      39023.0  2015.0   \n",
-       "140    NaN  Wrangell-Petersburg Census Area, AK       2280.0  2015.0   \n",
-       "522    NaN                      Yuma County, CO       8125.0  2013.0   \n",
-       "1665   NaN                Washington Parish, LA      22117.0  2009.0   \n",
-       "3323   NaN                   Dauphin County, PA      42043.0  2012.0   \n",
-       "2692   NaN                   Caswell County, NC      37033.0  2009.0   \n",
-       "852    NaN                    Warren County, GA      13301.0  2006.0   \n",
-       "3911   NaN                 Gillespie County, TX      48171.0  2014.0   \n",
-       "4149   ---                                  NaN          NaN     NaN   \n",
-       "\n",
-       "      Year Code                         Drug/Alcohol Induced Cause  \\\n",
-       "4465     2012.0          All other non-drug and non-alcohol causes   \n",
-       "710      2007.0          All other non-drug and non-alcohol causes   \n",
-       "3629     2006.0          All other non-drug and non-alcohol causes   \n",
-       "2070     2010.0                   All other alcohol-induced causes   \n",
-       "2813     2013.0  Drug poisonings (overdose) Unintentional (X40-...   \n",
-       "3496     2009.0          All other non-drug and non-alcohol causes   \n",
-       "3108     2015.0  Drug poisonings (overdose) Unintentional (X40-...   \n",
-       "140      2015.0       Drug poisonings (overdose) Suicide (X60-X64)   \n",
-       "522      2013.0          All other non-drug and non-alcohol causes   \n",
-       "1665     2009.0          All other non-drug and non-alcohol causes   \n",
-       "3323     2012.0                   All other alcohol-induced causes   \n",
-       "2692     2009.0          All other non-drug and non-alcohol causes   \n",
-       "852      2006.0          All other non-drug and non-alcohol causes   \n",
-       "3911     2014.0          All other non-drug and non-alcohol causes   \n",
-       "4149        NaN                                                NaN   \n",
-       "\n",
-       "     Drug/Alcohol Induced Cause Code   Deaths  \n",
-       "4465                              O9   1163.0  \n",
-       "710                               O9    126.0  \n",
-       "3629                              O9     12.0  \n",
-       "2070                              A9     16.0  \n",
-       "2813                              D1     14.0  \n",
-       "3496                              O9     92.0  \n",
-       "3108                              D1       71  \n",
-       "140                               D2  Missing  \n",
-       "522                               O9     82.0  \n",
-       "1665                              O9    569.0  \n",
-       "3323                              A9     15.0  \n",
-       "2692                              O9    219.0  \n",
-       "852                               O9     67.0  \n",
-       "3911                              O9    300.0  \n",
-       "4149                             NaN      NaN  "
+       "2015.0    4783\n",
+       "2014.0    4651\n",
+       "2013.0    4594\n",
+       "2012.0    4534\n",
+       "2011.0    4515\n",
+       "2010.0    4441\n",
+       "2008.0    4369\n",
+       "2009.0    4364\n",
+       "2007.0    4304\n",
+       "2006.0    4262\n",
+       "2005.0    4202\n",
+       "2004.0    4135\n",
+       "2003.0    4087\n",
+       "Name: Year, dtype: int64"
       ]
      },
      "execution_count": 6,
@@ -268,15 +33,12 @@
     "import pandas as pd\n",
     "\n",
     "# load 'Cause of Death' data of each year (2003-2015) and merge them into one dataframe\n",
-    "vital = pd.read_csv(\"/Users/preetkhowaja/Desktop/US_VitalStatistics/Underlying Cause of Death, 2003.txt\", sep='\\t')\n",
-    "\n",
+    "vital = pd.read_csv(f'/Users/Jung/Downloads/US_VitalStatistics/CauseofDeath2003.txt', sep='\\t')\n",
     "for i in range(2004, 2016):\n",
-    "    new_vital = pd.read_csv(f'/Users/preetkhowaja/Desktop/US_VitalStatistics/Underlying Cause of Death, {i}.txt', sep='\\t')\n",
+    "    new_vital = pd.read_csv(f'/Users/Jung/Downloads/US_VitalStatistics/CauseofDeath{i}.txt', sep='\\t')\n",
     "    vital = pd.concat([vital, new_vital])\n",
     "\n",
-    "\n",
-    "vital.sample(15)\n",
-    "\n"
+    "vital['Year'].value_counts()"
    ]
   },
   {
@@ -770,7 +532,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/preetkhowaja/opt/miniconda3/lib/python3.8/site-packages/pandas/core/frame.py:4901: SettingWithCopyWarning: \n",
+      "/Users/Jung/opt/miniconda3/lib/python3.9/site-packages/pandas/core/frame.py:4906: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1004,7 +766,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-13-e5ffb7c7a73e>:3: SettingWithCopyWarning: \n",
+      "/var/folders/p1/jgklqds92y73vr84wk5wz2cw0000gn/T/ipykernel_5724/2311712062.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1075,7 +837,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-15-87e7c5c6814f>:3: SettingWithCopyWarning: \n",
+      "/var/folders/p1/jgklqds92y73vr84wk5wz2cw0000gn/T/ipykernel_5724/634079126.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1256,7 +1018,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/preetkhowaja/opt/miniconda3/lib/python3.8/site-packages/pandas/core/frame.py:3636: SettingWithCopyWarning: \n",
+      "/Users/Jung/opt/miniconda3/lib/python3.9/site-packages/pandas/core/frame.py:3641: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1437,7 +1199,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/preetkhowaja/opt/miniconda3/lib/python3.8/site-packages/pandas/core/frame.py:4901: SettingWithCopyWarning: \n",
+      "/Users/Jung/opt/miniconda3/lib/python3.9/site-packages/pandas/core/frame.py:4906: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1584,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1476,7 @@
        "[7925 rows x 4 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,21 +1489,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# store data to csv file\n",
-    "vital_drug_group.to_csv('/Users/preetkhowaja/Documents/MIDS Fall 2021/Practicing DS/pds2021-opioids-pds6/10_modified_data/Vital.csv')"
+    "# store data to parquet file\n",
+    "#vital_drug_group.to_csv('/Users/preetkhowaja/Documents/MIDS Fall 2021/Practicing DS/pds2021-opioids-pds6/10_modified_data/Vital.csv')\n",
+    "import fastparquet\n",
+    "\n",
+    "vital_drug_group.to_parquet('/Users/Jung/pds2021-opioids-pds6/10_modified_data/Vital.parquet', engine = \"fastparquet\")"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "551c62dc04900b7c9656b03a0ed1114515bcd045db0a145f14557b857526032b"
+   "hash": "c81690342b15870db7aaea497db1cb7e7bf96278dec9f2548e71eb5bb764fc5d"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('base': conda)",
+   "display_name": "Python 3.9.7 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -1754,7 +1519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
