--- a/20_modeling/clean_opioid_update1101.ipynb
+++ b/20_modeling/clean_opioid_update1101.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +74,7 @@
     }
    ],
    "source": [
+    "# Don't run this part!!! The raw data is on Shining's laptop locally\n",
     "\n",
     "zipfiles = \"/Users/yangshining/Desktop/2021 fall @duke/IDS 720/mid-sem project/data/opioid_shipment/*.gz\"\n",
     "\n",
@@ -87,17 +88,17 @@
     "\n",
     "    for df in raw:\n",
     "\n",
-    "        df[\"TRANSACTION_DATE1\"] = pd.to_datetime(df[\"TRANSACTION_DATE\"], format='%m%d%Y')\n",
+    "        df[\"TRANSACTION_DATE1\"] = pd.to_datetime(df[\"TRANSACTION_DATE\"], format='%m%d%Y') # Convert transaction data to standardized date time\n",
     "\n",
-    "        df[\"year\"] = pd.DatetimeIndex(df[\"TRANSACTION_DATE1\"]).year\n",
+    "        df[\"year\"] = pd.DatetimeIndex(df[\"TRANSACTION_DATE1\"]).year # Extract year\n",
     "\n",
-    "        df = df[[\"BUYER_COUNTY\", \"BUYER_STATE\", \"year\", \"MME\"]]\n",
+    "        df = df[[\"BUYER_COUNTY\", \"BUYER_STATE\", \"year\", \"MME\"]] # Subset the columns that we need\n",
     "\n",
-    "        select_data.append(df)\n",
+    "        select_data.append(df) # Append the chunks to the list\n",
     "\n",
     "\n",
     "\n",
-    "whole_data = pd.concat(select_data)\n",
+    "whole_data = pd.concat(select_data) # Concatenate data\n",
     "\n",
     "grouped = whole_data.groupby([\"BUYER_STATE\", \"BUYER_COUNTY\", \"year\"], as_index=False).sum(\"MME\")\n",
     "\n",
@@ -111,8 +112,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read parquet data (Run this part so that you don't need to go over the large loop above)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped = pd.read_parquet(\"/Users/yangshining/Desktop/pds2021-opioids-pds6/10_modified_data/opioid_whole_final.parquet\", engine='fastparquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8736"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(grouped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test if each row represent a unique unit of data\n",
+    "assert len(grouped[grouped.duplicated([\"BUYER_STATE\", \"BUYER_COUNTY\", \"year\"], keep=False)==True]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -159,12 +206,13 @@
        "4663          NM   BERNALILLO  2006  1.915714e+08"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Load a random row to see if the dataset looks correct\n",
     "grouped[(grouped[\"year\"]==2006)& (grouped[\"BUYER_COUNTY\"]==\"BERNALILLO\")]"
    ]
   },
@@ -187,10 +235,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "551c62dc04900b7c9656b03a0ed1114515bcd045db0a145f14557b857526032b"
+   "hash": "9187b5666a5a3d04f2c74cd06b2af6f40fb3af58e398847229b96a5acbbf62ce"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('base': conda)",
+   "display_name": "Python 3.9.6 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -203,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
