--- a/20_modeling/clean_pop.ipynb
+++ b/20_modeling/clean_pop.ipynb
@@ -938,6 +938,59 @@
     "\n",
     "melted_pop.sample(14)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "pop = pd.read_parquet(\"/Users/yangshining/Desktop/pds2021-opioids-pds6/10_modified_data/pop_final.parquet\", engine='fastparquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Louisiana', 'Acadia Parish', 'Allen Parish', 'Ascension Parish',\n",
+       "       'Assumption Parish', 'Avoyelles Parish', 'Beauregard Parish',\n",
+       "       'Bienville Parish', 'Bossier Parish', 'Caddo Parish',\n",
+       "       'Calcasieu Parish', 'Caldwell Parish', 'Cameron Parish',\n",
+       "       'Catahoula Parish', 'Claiborne Parish', 'Concordia Parish',\n",
+       "       'De Soto Parish', 'East Baton Rouge Parish', 'East Carroll Parish',\n",
+       "       'East Feliciana Parish', 'Evangeline Parish', 'Franklin Parish',\n",
+       "       'Grant Parish', 'Iberia Parish', 'Iberville Parish',\n",
+       "       'Jackson Parish', 'Jefferson Parish', 'Jefferson Davis Parish',\n",
+       "       'Lafayette Parish', 'Lafourche Parish', 'Lincoln Parish',\n",
+       "       'Livingston Parish', 'Madison Parish', 'Morehouse Parish',\n",
+       "       'Natchitoches Parish', 'Orleans Parish', 'Ouachita Parish',\n",
+       "       'Plaquemines Parish', 'Pointe Coupee Parish', 'Rapides Parish',\n",
+       "       'Red River Parish', 'Richland Parish', 'Sabine Parish',\n",
+       "       'St. Bernard Parish', 'St. Charles Parish', 'St. Helena Parish',\n",
+       "       'St. James Parish', 'St. John the Baptist Parish',\n",
+       "       'St. Landry Parish', 'St. Martin Parish', 'St. Mary Parish',\n",
+       "       'St. Tammany Parish', 'Tangipahoa Parish', 'Tensas Parish',\n",
+       "       'Terrebonne Parish', 'Union Parish', 'Vermilion Parish',\n",
+       "       'Vernon Parish', 'Washington Parish', 'Webster Parish',\n",
+       "       'West Baton Rouge Parish', 'West Carroll Parish',\n",
+       "       'West Feliciana Parish', 'Winn Parish'], dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop[pop[\"STNAME\"]==\"Louisiana\"][\"CTYNAME\"].unique()"
+   ]
   }
  ],
  "metadata": {
