add some comments in the codes

--- a/20_modeling/opi_tx_month.ipynb
+++ b/20_modeling/opi_tx_month.ipynb
@@ -132,6 +132,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we are now analyzing data on a monthly basis, missing a county's population could become a big problem (because the missing observations are now a lot). So I fill the missing values here."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
