figured out Texas opioid monthly plot & fixed axis zero problem

--- a/20_modeling/opi_tx_month.ipynb
+++ b/20_modeling/opi_tx_month.ipynb
@@ -1107,9 +1107,7 @@
     "\n",
     "\n",
     "\n",
-    "# Check if there's any missing value in population\n",
-    "\n",
-    "opi_tx_pop[opi_tx_pop[\"Population\"].isnull()]  # La Salle is NOT considered to be a county in Louisiana"
+    "# Check if there's any missing value in population"
    ]
   },
   {
